HTML, JS, and CSS implemented to show overall design

--- a/index.html
+++ b/index.html
@@ -6,10 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css">
 </head>
 
 <body>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <a id="brandName" class="navbar-item">
+            RecipesR'US
+            </a>
 
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+        </div>
+
+        <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item">
+              Home
+            </a>
+
+                <a class="navbar-item">
+              Search
+            </a>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container is-fluid" id="recipeTiles">
+
+    </div>
+
+
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="defaultRecipes.js"></script>
     <script src="index.js"></script>
 </body>
 
