Added search functionality and changed recipe list to use local storage

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
             </a>
 
                 <a class="navbar-item">
-              Search
-            </a>
+                    <input id="searchInput" class="input" type="text" placeholder="Find a recipe">
+                    <button id="searchButton" class="button">
+                      Search
+                    </button>
+                </a>
             </div>
         </div>
     </nav>
@@ -44,6 +47,7 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="defaultRecipes.js"></script>
+    <script src="display.js"></script>
     <script src="index.js"></script>
 </body>
 
