Clicking 'My Recipes' will display recipes in local storage.  If nothing is found in search, a message will display

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item">
-              Home
-            </a>
+                <a id="myRecipes" class="navbar-item">
+                    My Recipes
+                </a>
 
                 <a class="navbar-item">
                     <input id="searchInput" class="input" type="text" placeholder="Find a recipe">
